Restored surefire failsafe distinction