@@ -1180,10 +1180,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
-              <systemPropertyVariables>
-                <net.snowflake.jdbc.loggerImpl>net.snowflake.client.log.JDK14Logger</net.snowflake.jdbc.loggerImpl>
-                <java.util.logging.config.file>${basedir}/src/test/resources/logging.properties</java.util.logging.config.file>
-              </systemPropertyVariables>
+              <test>UnitTestSuite</test>
             </configuration>
             <dependencies>
               <dependency>
@@ -1198,23 +1195,33 @@
                   <goal>test</goal>
                 </goals>
               </execution>
-              <!--
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <configuration>
+              <argLine>--add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED</argLine>
+            </configuration>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>verify</goal>
+                </goals>
+              </execution>
               <execution>
                 <id>DefaultIT</id>
                 <goals>
                   <goal>integration-test</goal>
                 </goals>
                 <configuration>
-                  <excludes>
-                    <exclude>**/DellBoomiCloudIT.java</exclude>
-                  </excludes>
                   <systemPropertyVariables>
                     <net.snowflake.jdbc.loggerImpl>net.snowflake.client.log.JDK14Logger</net.snowflake.jdbc.loggerImpl>
                     <java.util.logging.config.file>${basedir}/src/test/resources/logging.properties</java.util.logging.config.file>
                   </systemPropertyVariables>
+                  <test>${integrationTestSuites}</test>
                 </configuration>
               </execution>
-              -->
             </executions>
           </plugin>
           <plugin>
